# agedi

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
docs/: conf.py  index.rst
docs/source/: conf.py  index.rst  installation.rst  tutorial.rst
src/agedi/: __init__.py  helpers.py
src/agedi/data/: __init__.py  atoms_graph.py  dataset.py
src/agedi/diffusion/: __init__.py  diffusion.py
src/agedi/diffusion/noisers/: __init__.py  base.py  distributions.py  pos.py  sdes.py
src/agedi/models/: __init__.py  head.py  score.py  translator.py
src/agedi/models/conditionings/: __init__.py  base.py  scalar.py  time.py
src/agedi/models/schnetpack/: __init__.py  heads.py  translator.py
src/agedi/utils/: __init__.py
tests/: conftest.py
tests/data/: conftest.py  test_atoms_graph.py  test_dataset.py
tests/diffusion/: test_diffusion.py
tests/diffusion/noisers/: test_distributions.py  test_pos.py  test_sdes.py
tests/models/schnetpack/: test_heads.py  test_translator.py
