[project]
name = "AGeDi"
version = "0.0.1"
description = "Atomistic Generative Diffusion software package"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "torch",
    "lightning",
    "torch_geometric",
    "tensorboard",
    "numpy<2",
    "ase",
]

[project.optional-dependencies]
full = [
    "schnetpack",
]
test = [
    "pytest>=7.0.1",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.5",
    "pytest-mock>=3.14.0",
    "mypy>=1.11.2",
]


# [project.scripts]
# herd = "shepherd.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88

# [tool.ruff.format]
# quote-style = "single"
# indent-style = "space"
# docstring-code-format = true

# [tool.ruff.lint]
# select = ["F", "E4", "E7", "E9", # Defaults
#           "ANN001", "ANN204", "ANN201", # Type annotations
#           "I001", "I002", # Imports
#           "N", # Naming
#           "ERA001", # Eradicate / Commented out code
#           "A" # Shadowing of builtins
#           ]



# [tool.uv]
# dev-dependencies = [
#     "pytest>=7.0.1",
#     "pytest-cov>=5.0.0",
#     "ruff>=0.6.5",
#     "pytest-mock>=3.14.0",
#     "mypy>=1.11.2",
# ]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ['--cov-report', 'term', 
            '--cov-report', 'html:.coverage-html', 
            '--cov-report', 'xml:.coverage.xml',
            '--junitxml', '.report.xml',
            '--cov', 'src/agedi']
